# forel

./: .clippy.toml  .gitignore  .rustfmt.toml  .swiftlint.yml  AGENTS.md  CHANGELOG.md  Forel.entitlements  Package.swift  README.md  Taskfile.yml  app.go  build.sh  go.mod  go.sum  index.html  main.go  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
Sources/ForelApp/: AppDelegate.swift  AppModel.swift  ForelMacApp.swift
Sources/ForelCore/: SystemFileFilter.swift
Tests/ForelCoreTests/: ActionExecutorTests.swift  ConditionEvaluatorTests.swift  ContentExtractorTests.swift  DatabaseTests.swift  DownloadMetadataTests.swift  ExecutionPlanPreviewTests.swift  FileWatcherTests.swift  FilesystemEventTests.swift  ImportToLibraryTests.swift  PlanExecutorTests.swift  PlanValidatorTests.swift  RuleEngineTests.swift  RuleExpansionPreferencesTests.swift  RulePlannerTests.swift  RuleSchemaTests.swift  SystemFileFilterTests.swift  TestSupport.swift  UndoPlannerTests.swift  WatcherCoordinatorTests.swift
docs/: index.html  styles.css
frontend/: eslint.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  state.rs  tray.rs  watcher.rs
src-tauri/src/db/migrations/: mod.rs  v1_add_recursion_depth.rs  v2_add_action_history.rs
src-tauri/src/rules/: action.rs  condition.rs  engine.rs  mod.rs  model.rs
src-tauri/tests/: rules_integration.rs
(+87 files in other folders)
