[package]
name = "forel"
version = "0.1.0-alpha.7"
description = "Forel — open-source file automation for macOS"
authors = []
edition = "2021"

[lib]
name = "forel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
regex = "1"
log = "0.4"
xattr = "1"
plist = "1"
tauri-plugin-autostart = "2.5.1"
libc = "0.2.186"
